# Huawei_modem_calculator_v2

./: 50-myusb.rules  CMakeLists.txt  Huawei_modem_calculator.pro  README.md  install.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  serial1  serial1.pro  uninstall.sh
img/: Huawei_modem_calculator.desktop
